assets/css/style.css
/*-----------------------------------------------------------body*/

body {
    font-size: 16px;
}

/*-----------------------------------------------------------header*/

.headerlogo {
    padding-top: 50px;
    padding-bottom: 50px;
    background-color: #ff893a;
    float: center;
    margin: 0 auto;
    border: 3px solid #a8e038;
}

.headerbrand {
    font-family: "Baloo Thambi 2", sans-serif;   
    color: #a8e038;
    background-color: #ff893a;
    margin: 0 auto;
    border: 3px solid #a8e038;
}

.headerbrand h1 {
    text-align: center;
    font-size: 4rem;
    margin-top: 15%;
    max-width: 100%;
    height: auto;
}

.navbar {
    background-color: #a8e038;
    padding: 0;
    margin:0 auto;
}

#navbarnav {
    background-color: #a8e038;
    font-size: 130%;
}


/*-----------------------------------------------------------buttons*/

.headerbutton {
    background-color: #a8e038;
}

.enquire {
    color: white;
    background-color: #ff893a;
    border-color: #ff893a;
    margin-top: 15px;
    margin-bottom: 15px;
}

/*-----------------------------------------------------------images*/

img {
  width:100%;
  height: auto;
  background-repeat: no-repeat;
}


#translucentbox, #translucentbox h1 {
  color:#a8e038;
}

#translucentbox {
  font-size: 130%;
  font-family: "Baloo&nbspThambi&nbsp2", sans-serif; 
  letter-spacing: 4px;
  width: 300px;
  height: 200px;
  padding-top: 40px;
  padding-left: 10px;
  background-color: rgba(255, 137, 58, .7);
  bottom: 150px;
  right: 1px;
  position: absolute;
}

